# NewsDaily

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
examples/: .env.example
mobile/flutter_app/: README.md  pubspec.yaml
mobile/flutter_app/lib/: api_client.dart  config.dart  main.dart
mobile/flutter_app/lib/widgets/: headline_tile.dart
mobile/react_native_app/: .env.example  App.js  README.md  app.json  package.json
mobile/react_native_app/src/: apiClient.ts  config.ts
scripts/: cron_example.sh  run_server.sh
server/: main.py
src/dailynews/: __init__.py  cli.py  config.py  emailer.py  fetcher.py  logging_conf.py  service.py  summarizer.py
tests/: conftest.py  test_api.py  test_cli.py  test_fetcher.py  test_service.py  test_summarizer.py
tests/stubs/: requests.py
tests/stubs/click/: __init__.py  testing.py
