[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dailynews"
version = "0.1.0"
description = "Fetch, summarize, and optionally email daily news headlines."
authors = [{name = "DailyNews Authors", email = "author@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "requests>=2.31",
    "transformers>=4.40",
    "python-dotenv>=1.0",
]

[project.scripts]
dailynews = "dailynews.cli:main"
